--- a/_toc.yml
+++ b/_toc.yml
@@ -4,10 +4,10 @@ parts:
 - caption: 产品特性
   chapters:
   - url: https://www.figma.com/file/SXfo2E7RPsockMJ74aNNI0/%E9%87%8F%E6%BD%AE%E6%95%B0%E6%8D%AE%E4%BA%91%E7%94%A8%E6%88%B7%E6%95%85%E4%BA%8B%E5%9C%B0%E5%9B%BE?type=whiteboard&node-id=0%3A1&t=JXVqq4vc3gOPxYsv-1
-    title: 用户故事地图
+    title: 全景图
   - file: features/collection/README.md
     sections:
-    - file: features/collection/tracking.md
+    - file: features/collection/monitoring.md
 - caption: 竞品调研
   chapters:
   - file: competitors/airflow.md
