--- a/_toc.yml
+++ b/_toc.yml
@@ -13,6 +13,7 @@ parts:
 - caption: 产品特性
   chapters:
   - file: features/datasets/README.md
+  - file: features/applications/README.md
   - file: features/collecting/README.md
     sections:
     - file: features/collecting/monitoring.md
